fix font doubling on mobile

--- a/src/components/typography.styl
+++ b/src/components/typography.styl
@@ -7,14 +7,15 @@ html
 html, body, h3, h4, h5, h6
   font-family Brewery
   color rgba(0,0,0,0.8)
+
+h1, h2, h3, h4, h5, h6
+  text-align center
+  font-weight normal
   
 h1, h2
   font-family Respira
-  text-align center
   color annaRed
 
-h3, h4, h5, h6
-  text-align center
   
 h1
   margin 1.5rem auto 3rem auto
